--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 border-[#010313CC] bg-[#FFFFFFB3]">
                 
                    <div class="flex justify-center ">
-                    <p class="bg-[#2F2941] px-6 pb-4 rounded-b-xl text-white">
+                    <p  class="bg-[#2F2941] px-6 pb-4 rounded-b-xl text-white">
                       Don't watch keyboard  while playing...
                     </p>
                    
@@ -108,7 +108,7 @@
              <h4 class="text-3xl">Game Over !!</h4>
               <h1 class="text-8xl">
                 <span class="font-extrabold">Score:</span>
-                <span>14</span>
+                <span id="last-score">14</span>
               </h1>
               <button onclick="play()" class="btn">Play Again</button>
               <p>Practice  will make you pro.</p>
